# jhara

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  biome.json  bts.jsonc  ci_logs.md  deny.toml  package.json  skills-lock.json  tsconfig.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.yml  profile-card.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  ecosystem_addition.md  feature_request.md
.github/workflows/: ci.yml  labels.yml  release.yml  security.yml  stale.yml
.husky/: pre-commit
apps/jhara-cli/: Cargo.toml
apps/jhara-cli/src/: main.rs
apps/server/: .env  package.json  tsconfig.json  tsdown.config.ts
apps/web/: components.json  next.config.ts  package.json  tsconfig.json
crates/jhara-core/: Cargo.toml  build.rs  pow.js
crates/jhara-core/data/: example_community.json  schema.json
crates/jhara-core/src/: artifact-detector.rs  error.rs  lib.rs
crates/jhara-core/src/classifier/: blocklist.rs  mod.rs  staleness.rs
crates/jhara-core/src/cleaner/: git.rs  mod.rs
crates/jhara-core/src/detector/: artifact_scan.rs  frameworks.rs  ghosts.rs  mod.rs  monorepo.rs  safety.rs  signatures.rs  types.rs  xcode.rs
crates/jhara-core/src/ffi/: mod.rs  types.rs
crates/jhara-core/src/scanner/: dedup.rs  inode.rs  mod.rs  platform.rs  tree.rs  types.rs
files 2/: Cargo.toml  JharaApp-Bridging-Header.h  JharaFFIAlignmentTests.swift  build.rs  build_universal.sh  cbindgen.toml  jhara_core.h  lib.rs  mod.rs  types.rs
scripts/: build_universal.sh  fix_test_targets.rb
(+46 files in other folders)
