[workspace]
members = [
    "crates/jhara-core",
    "crates/jhara-macos-ffi",
#    "apps/desktop/src-tauri",
    "apps/jhara-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["H.M. Yousuf <hmyousuf@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/hmyousuf/jhara"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
