[package]
name = "jhara-cli"
version = "0.1.0"
edition = "2021"
authors = ["H.M. Yousuf"]
license = "Apache-2.0"

[dependencies]
jhara-core = { path = "../../crates/jhara-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
indicatif = "0.17"
