[package]
name = "jhara-core"
version = "0.1.0"
edition = "2021"
authors = ["H.M. Yousuf"]
description = "Core detection and analysis engine for Jhara disk manager"
license = "MIT"
repository = "https://github.com/hmyousuf/jhara"

[lib]
name = "jhara_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
plist = "1"          # Apple plist parsing for Xcode DerivedData reverse lookup
jwalk    = "0.8.1"
rayon    = "1.10.0"
ustr     = "0.10.0"
bumpalo  = "3.16.0"
dirs     = "5.0"

[dev-dependencies]
tempfile = "3"       # Real temp directories for integration tests

[build-dependencies]
cbindgen = "0.26"
